# my.justfiles

./: .my-aliases  cpp.justfile
cpp_23_template/: .clang-format  .clangd  .cmake-format  CMakeLists.txt  NEWPROJNAME.cpp  mod.cxx
cpp_23_template/src/: mod.cxx
cpp_upto_20_template/: .clang-tidy  .clangd  CMakeLists.txt  NEWPROJNAME.cpp
